Update styling: fonts, borders, shadows

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;800;900&family=Rubik:wght@800&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;800&family=Staatliches&display=swap"
 			rel="stylesheet"
 		/>
 		<title>Dev-Duel</title>
